kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: php-web-service-namespace
  labels:
    name: php-web-service-namespace
